# nidaqmx-mcp-server

./: .gitignore  README.md  nidaqmx_pb2.py  nidaqmx_pb2_grpc.py  nidevice_pb2.py  nidevice_pb2_grpc.py  server.py  server_old.py  session_pb2_grpc.py  tdms_server.py
research/: README.md  pyproject.toml  server.py  smoketest_align.py
research/app/: analysis.py  state.py  web.py
research/app/static/: app.js  index.html  style.css
server/: server.py
shared/: paths.py
